Twenty Fifteen: remove `a img { display: block; }` from editor-style.css. Matches previous changes to style.css and fixes extra space when displaying captions in Firefox. Fixes #32007. Built from https://develop.svn.wordpress.org/trunk@32231
git-svn-id: http://core.svn.wordpress.org/trunk@32205 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfifteen/css/editor-style.css
+++ b/wp-content/themes/twentyfifteen/css/editor-style.css
@@ -301,10 +301,6 @@ img {
 	vertical-align: middle;
 }
 
-a img {
-	display: block;
-}
-
 figure {
 	margin: 0;
 }
